[package]
name = "rvtools2vse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# calamine = "0.19.1"
anyhow = "1.0.58"
office = "0.8.1"
itertools = "0.10.5"
serde = {version = "1.0.152", features = ["derive"]}
clap = { version = "4.1.6", features = ["derive"] }
serde_json = "1.0.93"
comfy-table = "6.1.4"
thiserror = "1.0.38"
derive-new = "0.5.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
